// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DOM shared by all buttons 1`] = `
.c0 {
  background: none;
  border: none;
  border-radius: var(--corner-radius);
  cursor: pointer;
  font-family: var(--font-roboto);
  font-size: var(--size-14);
  font-weight: var(--weight-bold);
  line-height: var(--size-20);
  padding: var(--size-8) var(--size-16);
  text-transform: uppercase;
  -webkit-transition: opacity var(--duration-short);
  transition: opacity var(--duration-short);
}

.c0:hover {
  opacity: 0.8;
}

<button
  className="c0"
/>
`;

exports[`renders DOM specific to a raised button 1`] = `
Diff:
- <BaseComponent />
+ <CompareComponent />

@@ -12,6 +12,9 @@
    text-transform: uppercase;
    -webkit-transition: opacity var(--duration-short);
    transition: opacity var(--duration-short);
+   color: var(--color-white);
+   background-color: var(--color-green);
+   box-shadow: var(--elevation-low);
  }
  
  .c0:hover {
`;

exports[`renders DOM specific to a text button 1`] = `
Diff:
- <BaseComponent />
+ <CompareComponent />

@@ -12,6 +12,7 @@
    text-transform: uppercase;
    -webkit-transition: opacity var(--duration-short);
    transition: opacity var(--duration-short);
+   color: inherit;
  }
  
  .c0:hover {
`;
